# CAL-proj

./: CMakeLists.txt  README.md
Projeto - CG1/: .cproject  .project
Projeto - CG1/InfoFiles/: Cidade1.txt  Cidade2.txt  Cidade3.txt  Cidade4.txt  Cidade5.txt  cities.txt  clients.txt
Projeto - CG1/src/: Accommodation.c  Accommodation.cpp  Accommodation.h  Agency.cpp  Agency.h  Algorithms.c  Algorithms.cpp  Algorithms.h  Clients.c  Clients.cpp  Clients.h  Coordinates.cpp  Coordinates.h  Date.c  Date.cpp  Date.h  Destiny.c  Destiny.cpp  Destiny.h  Graph.h  ImportInfo.cpp  ImportInfo.h  Interface.cpp  Interface.h  Libraries.h  Period.c  Period.cpp  Period.h  PossibleDestinies.cpp  PossibleDestinies.h  main.cpp
Projeto_Parte1/: .cproject  .project
Projeto_Parte1/InfoFiles/: 1.txt  10.txt  11.txt  12.txt  13.txt  17.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  clients.txt
Projeto_Parte1/Projeto_Parte1/: .project
Projeto_Parte1/Projeto_Parte1/InfoFiles/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  clients.txt  reservations.txt
Projeto_Parte1/Projeto_Parte1/src/: Accommodation.h  Agency.cpp  Agency.h  Algorithms.cpp  Algorithms.h  Clients.h  Coordinates.h  Destiny.h  ExportInfo.cpp  ExportInfo.h  ExportInfor.cpp  Graph.h  ImportInfo.cpp  ImportInfo.h  Interface.cpp  Interface.h  Libraries.h
Projeto_Parte1/src/: Accommodation.cpp  Accommodation.h  Agency.cpp  Agency.h  Algorithms.cpp  Algorithms.h  Clients.h  Date.cpp  Date.h  Destiny.cpp  Destiny.h  ExportInfo.h  Graph.h  ImportInfo.cpp  ImportInfo.h  Interface.cpp  Interface.h  Libraries.h  Period.cpp  Period.h  PossibleDestinies.cpp  PossibleDestinies.h
Projeto_Parte2/Projeto_Parte2/: .cproject  .project
Projeto_Parte2/Projeto_Parte2/.tracecompass/: .project
Projeto_Parte2/Projeto_Parte2/InfoFiles/: 12.txt  15.txt  16.txt  18.txt  2.txt  3.txt  4.txt  5.txt  6.txt  8.txt  9.txt  clients.txt  reservations.txt
Projeto_Parte2/Projeto_Parte2/src/: Accommodation.cpp  Accommodation.h  Agency.cpp  Agency.h  Algorithms.cpp  Algorithms.h  Clients.cpp  Date.h  Destiny.cpp  Destiny.h  Graph.h  ImportInfo.cpp  ImportInfo.h  Interface.cpp  Interface.h  Period.h  PossibleDestinies.h
